Closed Bug 1591876 Opened 5 years ago Closed 5 years ago

select() crashes in libpcslite

Categories

(External Software Affecting Firefox :: Other, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: gsvelto, Assigned: gsvelto)

References

Details

Crash Data

The libpcslite.so library from the PCSC project relies on a select() call which is crashing Firefox when passed file descriptor values larger than FD_SETSIZE. This bug is to track those crashes and the upstream fix.

My fix has been applied to the upstream project, hopefully the next release will be rolled out soon.

https://salsa.debian.org/rousseau/PCSC/commit/20385efba2075d4c13acfea43d0abc8c38d8c106

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Assignee: nobody → gsvelto

A new version of PCSC has just been released with the fix included. Hopefully it will reach the downstream distributions soon.

You need to log in before you can comment on or make changes to this bug.